[package]
name = "neardevhub-kyc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = "0.7.7"
near-account-id = { version = "1.0.0", features = ["serde"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.28.2"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
